# InsightBot

./: .env.example  .env.local.example  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  LOCAL_TESTING_GUIDE.md  README.md  app.py  bot.log.2026-03-02  bot.log.2026-03-03  bot.log.2026-03-04  bot.log.2026-03-05  bot.log.2026-03-06  bot.log.2026-03-07  bot.log.2026-03-08  bot.log.2026-03-09  bot.log.2026-03-10  bot.log.2026-03-11  bot.log.2026-03-12  bot.log.2026-03-13  bot.log.2026-03-14  bot.log.2026-03-15  bot.log.2026-03-16  bot.log.2026-03-17  bot.log.2026-03-18  config.content.json  config.json  config.local.example.json  config.secrets.example.json  daily_brief.py  debug_prompt.py  debug_rss_check.py  debug_run.py  docker-compose.yml  insightbot.service  log.txt  pyproject.toml  requirements.txt  (+1 more)
data/: wewe-rss.db
editorial-intelligence/: README.md  pyproject.toml
editorial-intelligence/docs/: architecture.md
editorial-intelligence/docs/skills/: editorial-briefing.md
editorial-intelligence/editorial_intelligence/: __init__.py
editorial-intelligence/editorial_intelligence/adapters/: __init__.py  base.py  rss.py  search.py
editorial-intelligence/editorial_intelligence/contracts/: __init__.py  briefing_result.py  editorial_policy.py  execution_mode.py  goal.py  source_strategy.py  source_weight.py
editorial-intelligence/editorial_intelligence/diagnostics/: __init__.py  coverage.py  source_failures.py
editorial-intelligence/examples/: insightbot_integration.py  run_editorial_briefing.py
editorial-intelligence/tests/: test_editorial_pipeline.py  test_insightbot_bridge.py
insightbot/: __main__.py  ai.py  channels.py  cli.py  config.py  daily_brief_runner.py  discovery_service.py  editorial_pipeline.py  feed_health.py  feishu.py  feishu_app.py  logging_setup.py  migrate.py  paths.py  prompt_debug_history.py  pyproject.toml  run_diagnosis.py  run_history.py  scheduler.py  smart_brief_runner.py  task_health_store.py  task_runner.py  task_state.py  task_validation.py  wecom.py  wecom_callback.py
insightbot/discovery/: __init__.py  ai.py  base.py  dedup.py  directory.py  quality.py  search.py  url_resolver.py
scripts/: app.py  (+2 more)
(+50 files in other folders)
