[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "editorial-intelligence"
version = "0.1.0"
description = "Editorial intelligence runtime for multi-source briefing workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mika Creative" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["editorial_intelligence*"]

