[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insightbot"
version = "0.4.0"
description = "AI-powered marketing insight bot"
readme = "README.md"
requires-python = ">=3.10"
# 运行时依赖统一在 /requirements.txt 管理
# 此文件仅用于包元数据
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["insightbot*"]
